--- a/app/src/main/res/menu/poster_fragment.xml
+++ b/app/src/main/res/menu/poster_fragment.xml
@@ -6,8 +6,10 @@
         android:id="@+id/action_favorite"
         android:icon="@drawable/ic_favorite_outline_light"
         android:title="@string/action_favorite"
-        app:showAsAction="ifRoom"></item>
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_share"
-        android:title="@string/action_share"></item>
+        android:title="@string/action_share"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        app:showAsAction="ifRoom" />
 </menu>
