--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string-array name="pref_sortorder_options">
-        <item>@string/pref_sortorder_label_popular</item>
-        <item>@string/pref_sortorder_label_rating</item>
+    <string-array name="pref_theme_options">
+        <item>@string/pref_theme_label_dark</item>
+        <item>@string/pref_theme_label_light</item>
     </string-array>
 
-    <string-array name="pref_sortorder_values">
-        <item>@string/pref_sortorder_popular</item>
-        <item>@string/pref_sortorder_rating</item>
+    <string-array name="pref_theme_values">
+        <item>@string/pref_theme_dark</item>
+        <item>@string/pref_theme_light</item>
+    </string-array>
+
+    <string-array name="pref_cache_options">
+        <item>@string/pref_cache_label_never</item>
+        <item>@string/pref_cache_label_1h</item>
+        <item>@string/pref_cache_label_4h</item>
+        <item>@string/pref_cache_label_12h</item>
+        <item>@string/pref_cache_label_24h</item>
+    </string-array>
+
+    <string-array name="pref_cache_values">
+        <item>@string/pref_cache_never</item>
+        <item>@string/pref_cache_1h</item>
+        <item>@string/pref_cache_4h</item>
+        <item>@string/pref_cache_12h</item>
+        <item>@string/pref_cache_24h</item>
     </string-array>
 
     <string-array name="main_tab_names">
