--- a/app/src/main/res/layout/fragment_full_poster.xml
+++ b/app/src/main/res/layout/fragment_full_poster.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@color/black_overlay"
     tools:context="com.example.leshik.moviedb.FullPosterFragment">
 
     <com.example.leshik.moviedb.TouchImageView
