--- a/app/src/main/res/layout/reviews_list_item.xml
+++ b/app/src/main/res/layout/reviews_list_item.xml
@@ -18,8 +18,8 @@
         android:id="@+id/reviews_list_item_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        expandableTextView:maxCollapsedLines="4"
-        expandableTextView:animDuration="200">
+        expandableTextView:animDuration="200"
+        expandableTextView:maxCollapsedLines="4">
 
         <TextView
             android:id="@id/expandable_text"
@@ -27,15 +27,15 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textSize="16sp"
-            android:textColor="#666666" />
+            android:textColor="#666666"
+            android:textSize="16sp" />
 
         <ImageButton
             android:id="@id/expand_collapse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp"
             android:layout_gravity="right|bottom"
-            android:background="@android:color/transparent" />
+            android:background="@android:color/transparent"
+            android:padding="16dp" />
     </com.ms.square.android.expandabletextview.ExpandableTextView>
 </LinearLayout>
