--- a/app/src/main/res/layout/videos_list_item.xml
+++ b/app/src/main/res/layout/videos_list_item.xml
@@ -3,13 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/videos_list_item_frame"
+    android:paddingBottom="@dimen/detail_video_list_items_padding"
+    android:paddingTop="@dimen/detail_video_list_items_padding">
 
     <ImageView
+        android:id="@+id/videos_list_item_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_media_play"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        app:srcCompat="@android:drawable/ic_media_play" />
 
     <TextView
         android:id="@+id/videos_list_item_title"
