--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="detail_right_margin">16dp</dimen>
     <dimen name="detail_title_vertical_margin">16dp</dimen>
     <dimen name="detail_interviews_padding">8dp</dimen>
+    <dimen name="detail_video_list_items_padding">4dp</dimen>
 </resources>
