--- a/app/src/main/res/menu/detail_fragment.xml
+++ b/app/src/main/res/menu/detail_fragment.xml
@@ -8,6 +8,11 @@
         android:title="@string/action_favorite"
         app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/action_share"
+        android:title="@string/action_share"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_refresh"
         android:orderInCategory="100"
         android:title="@string/action_refresh_movie"
