--- a/app/src/main/res/layout/fragment_full_poster.xml
+++ b/app/src/main/res/layout/fragment_full_poster.xml
@@ -7,7 +7,7 @@
     android:background="@color/black_overlay"
     tools:context="com.example.leshik.moviedb.FullPosterFragment">
 
-    <com.example.leshik.moviedb.TouchImageView
+    <uk.co.senab.photoview.PhotoView
         android:id="@+id/full_poster_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
