--- a/app/src/main/res/layout/reviews_list_item.xml
+++ b/app/src/main/res/layout/reviews_list_item.xml
@@ -27,8 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:textColor="#666666"
-            android:textSize="16sp" />
+            android:textColor="#666666" />
 
         <ImageButton
             android:id="@id/expand_collapse"
