--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        tools:context=".MovieListFragment"
+        tools:context=".ui.main.MovieListFragment"
         android:background="?attr/colorPrimary" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
