--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,7 @@
     tools:context="com.example.leshik.moviedb.ui.main.MainActivity"
     tools:ignore="MergeRootFrame">
 
-    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/main_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp" />
+    <include layout="@layout/toolbar" />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/main_tabs"
