--- a/app/src/main/res/layout/videos_and_reviews.xml
+++ b/app/src/main/res/layout/videos_and_reviews.xml
@@ -21,10 +21,19 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@android:color/white" />
 
-        <TableLayout
-            android:id="@+id/videos_list"
+        <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:fillViewport="false"
+            android:scrollbarAlwaysDrawHorizontalTrack="false"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:id="@+id/videos_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"></LinearLayout>
+        </HorizontalScrollView>
 
     </LinearLayout>
 
