--- a/app/src/main/res/layout/videos_list_item.xml
+++ b/app/src/main/res/layout/videos_list_item.xml
@@ -1,30 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/videos_list_item_frame"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:paddingBottom="@dimen/detail_video_list_items_padding"
-    android:paddingTop="@dimen/detail_video_list_items_padding">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:foreground="?android:attr/selectableItemBackground">
 
     <ImageView
-        android:id="@+id/videos_list_item_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        app:srcCompat="@android:drawable/ic_media_play" />
+        android:id="@+id/video_thumb"
+        android:layout_width="120dp"
+        android:layout_height="90dp"
+        android:cropToPadding="true"
+        android:clickable="true"
+        android:layout_marginRight="@dimen/detail_inter_video_margin"
+        android:layout_marginTop="@dimen/detail_inter_video_margin"
+        android:layout_marginBottom="@dimen/detail_inter_video_margin" />
 
-    <TextView
-        android:id="@+id/videos_list_item_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:background="?android:attr/selectableItemBackground"
-        android:fontFamily="sans-serif-light"
-        android:lineSpacingMultiplier="1.2"
-        android:text="Trailer"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@android:color/white" />
-
-</LinearLayout>
+</FrameLayout>
