--- a/app/src/main/res/layout/activity_full_poster.xml
+++ b/app/src/main/res/layout/activity_full_poster.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:gravity="center" />
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/detail_toolbar" />
 
     <TextView
         android:id="@+id/full_poster_title"
