--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
     tools:context="com.example.leshik.moviedb.ui.main.MainActivity"
     tools:ignore="MergeRootFrame">
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/main_toolbar" />
 
     <android.support.design.widget.TabLayout
         android:id="@+id/main_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.view.ViewPager
         android:id="@+id/main_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
