--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -9,7 +9,6 @@
     <Spinner
         android:id="@+id/toolbar_spinner"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="?android:selectableItemBackground" />
+        android:layout_height="match_parent" />
 
 </android.support.v7.widget.Toolbar>
